♻️ Great Refactor: Part 1 – Remove old stuff, fix some TODOs, warn about deprecated stuff